Append children in the right order